tests/invalid_sem/com/com16.java
class Main {
    static void run() {
        int a = hello();
    }
    static void hello() {
        return;
    }
}
